fixed spacing with slider arrows

--- a/client/src/components/SimpleSlider/SimpleSlider.css
+++ b/client/src/components/SimpleSlider/SimpleSlider.css
@@ -1,3 +1,8 @@
+.slider {
+  max-width: 700px;
+  margin: 0 auto;
+}
+
 .carousel img {
   width: 40vw;
   height: 300px;
